# zero2prod

./: Cargo.toml  Dockerfile  README.md  TODO.md  configuration.yaml.dist  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230531184104_create_subscriptions_table.sql  20230614191450_make_status_not_null_in_subscriptions.sql  20230614225643_create_subscription_tokens_table.sql  20230628213153_create_users_table.sql  20230703221911_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
